syntax = "proto3";

package pb;

option go_package = "github.com/khiemta03/bookstore-be/book-service/internal/grpc/gen/book;pb";

message AddNewPublisherRequest {
    string name = 1;
    string address = 2;
}