syntax = "proto3";

package pb;

option go_package = "github.com/khiemta03/bookstore-be/book-service/internal/grpc/gen/book;pb";

message ListBooksRequest {
    int32 page = 1;
    int32 per_page = 2;
}
