syntax = "proto3";

package pb;

option go_package = "github.com/khiemta03/bookstore-be/book-service/internal/grpc/book/pb;pb";

message GetAuthorRequest {
    string id = 1;
}
